--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<h1 i18n="Greeting">Hello</h1>
+<html>
+    <head>
+        <meta>
+        <style rel="style">
+
+
+            #globe::after {
+                content: "🌐"
+            }
+        </style>
+        <script>
+
+            debugger;
+
+        </script>
+    </head>
+    <body>
+        <h1 i18n="Greeting">Hello <span id="globe"></span></h1>
+    </body>
+</html>
