--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
-    <head>
-        <meta>
+        <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
         <style rel="style">
 
 
