--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-        <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
+        <script src="https://unpkg.com/twemoji@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
         <style rel="style">
 
 
