--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-        <script src="https://unpkg.com/twemoji@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
+    <head>
+        <script src="https://unpkg.com/@fluentui/web-components@2.5.12/dist/web-components.min.js"></script>
+        <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
         <style rel="style">
 
 
