update competency matrix embed

--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <body>
         <h1 i18n="Greeting">Hello <span>🌐</span></h1>
         <h2>📃 Competency Matrix</h2>
-        <iframe src="https://onedrive.live.com/embed?cid=F9480B74B852B3B7&resid=F9480B74B852B3B7%21251307&authkey=ALWOWl3ShAlVT70&em=2" width="1200" height="800" frameborder="0" scrolling="no"></iframe>
+        <iframe width="1200" height="800" frameborder="0" scrolling="no" src="https://onedrive.live.com/embed?resid=F9480B74B852B3B7%21251307&authkey=%21ALWOWl3ShAlVT70&em=2&wdAllowInteractivity=False&Item=ClusterExperience&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True&edesNext=false&resen=false&ed1JS=false"></iframe>
     </body>
 </html>
