--- a/me/wwwroot/index.html
+++ b/me/wwwroot/index.html
@@ -33,7 +33,7 @@
     <div id="blazor-error-ui">
         An unhandled error has occurred.
         <a href="" class="reload">Reload</a>
-        <a class="dismiss">🗙</a>
+        <a class="dismiss">????</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
