--- a/me/wwwroot/index.html
+++ b/me/wwwroot/index.html
@@ -19,6 +19,9 @@
     </script>
     <link href="_content/Syncfusion.Blazor.Themes/fluent.css" rel="stylesheet" />
     <script src="_content/Syncfusion.Blazor.Core/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
+    <meta http-equiv='cache-control' content='no-cache'> 
+    <meta http-equiv='expires' content='0'> 
+    <meta http-equiv='pragma' content='no-cache'>
 </head>
 
 <body>
