Add Bing site verification via XML and meta tag
Updated `me.csproj` to include `BingSiteAuth.xml` in output.
Added `BingSiteAuth.xml` with Bing verification code.
Modified `index.html` to include Bing site validation meta tag.

--- a/me/wwwroot/index.html
+++ b/me/wwwroot/index.html
@@ -23,6 +23,7 @@
     <meta http-equiv='cache-control' content='no-cache'>
     <meta http-equiv='expires' content='0'>
     <meta http-equiv='pragma' content='no-cache'>
+    <meta name="msvalidate.01" content="C92B5D3F915E2C466D2210DC3FBB1E52" />
 </head>
 
 <body>
